# grpc-qt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/client/: client_window.cpp  client_window.h  connection_item.cpp  connection_item.h  connections_model.cpp  connections_model.h  grpc_stub.cpp  grpc_stub.h  main.cpp
src/client/delegates/: button_delegate.cpp  button_delegate.h
src/proto/: CMakeLists.txt
src/server/: grpc_worker.cpp  grpc_worker.h  main.cpp  server_window.cpp  server_window.h
